fix: adjust margin for hero-row and hello-btn in mobile view for improved spacing

--- a/src/app/main-component/atf/atf.component.scss
+++ b/src/app/main-component/atf/atf.component.scss
@@ -226,6 +226,9 @@
 }
 
 @media (max-width: 767px) {
+  .hero-row--top{
+    margin-bottom: 15px;
+  }
   .rt-top{
     margin-bottom: 0;
   }
@@ -234,6 +237,7 @@
   }
   .hello-btn{
     margin: 0;
+    margin-bottom: 15px;
   }
   .responsive-title {
     font-size: 16.8vw; // Responsive Schriftgröße
